# catsay

./: Cargo.toml  README.md  catfile.txt  stderr.txt
src/: main.rs
tests/: integration_test.rs
