[package]
name = "catsay-bpv"
version = "0.2.0"
authors = ["Bernatsky Pavel"]
edition = "2018"
description = "catsay - tool that makes a cat speak your message"
repository = "https://github.com/BernatskyPavel/catsay"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
colored = "2.0.0"
failure = "0.1.8"
exitfailure = "0.5.1"
assert_cmd = "1.0.4"
predicates = "1.0.8"
terminal_size = "0.1.17"